projeto soteador finalizado

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input placeholder="e" class="input2">
     </div>
    
-    <button>Sorteador</button>
+    <button onclick="generatenumber()">Sorteador</button>
 
 
 </body>
